[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["Rodrigo Garcia <rg_moraes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
streamlit = "^1.45.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
